sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:13: error: Unit does not take parameters
                     {echange(j,j+1)
                     ^